--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>Undangan Ikbal & Putri</title>
+<title>Undangan Khitan Aransha 
 
-<img src="https://github.com/1Rumah/Undangan-Ikbal-dan-Putri/blob/main/foto1%20(14).jpeg" alt="Undangan Ikbal & Putri">
+Sabtu, 22 Feb 2025</title>
+
 
     <style>
         * {
